--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="about.html">about me</a></br>
         <a href="kontakt.html">contacts</a></br>
         <a href="https://slepice24.itch.io/parallel-cat">my first game</a></br>
-        <u><b><font size="2px">images arent my, i sto- i mean i borrowed them!</font></b></u>
+        <u><b><font size="2px">images arent my, i sto- i mean i borrowed them!</b></br>btw no js required</font></u>
         </font>
       </ul>
       <img class="main9" src="cirno.png">
