--- a/about.html
+++ b/about.html
@@ -13,13 +13,15 @@
     </nav>
     <header></header>
     <main>
+      <img class="image9" src="9ballidiot.jpg" alt="nine ball idiot">
+      <img class="image" src="cirno9.jpg" alt="nine ball idiot">
       <ul class="things">
         <font size="5px">
         <u>guy that likes to program or make stories for fun.</u></br>
         <u>not too talkactive (sometimes) but would like to make friends.</u></br>
         <u>i suck at a lot of thing</u></br>
         </br>
-        <u>likes Anime, Touhou project, linux (i use Fedora btw), </br> games (Minecraft with mods, Terraria, bullet hell,</br> Factorio, strategy and logic games, <b><a href="https://osu.ppy.sh/users/31450404">osu!</a></b> (not good at it), stories, science (nerd shit),</br> space (i can talk about this for day)</u></br>
+        <u>likes Anime, Touhou project, linux (i use Fedora btw), </br> games (Minecraft with mods, Terraria, bullet hell,</br> Factorio, strategy and logic games, <b><a href="https://osu.ppy.sh/users/31450404">osu!</a></b> not good at it), stories, science (nerd shit),</br> space (i can talk about this for day)</u></br>
         </br>
         <u>and i am funny (i dont think that but my friends think that) and chill</u></br>
         </br>
@@ -28,7 +30,7 @@
         <b><a href="index.html">Back</a></b></br>
         </font>
       </ul>
-      <img class="image" src="cirno9.jpg" alt="nine ball idiot">
+      
       
     </main>
     <footer></footer>
