--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <header></header>
     <main>
       <img class="image9" src="9ballidiot.jpg" alt="nine ball idiot">
-      <img class="image" src="cirno9.jpg" alt="nine ball idiot">
+      /*<img class="image" src="cirno9.jpg" alt="nine ball idiot">*/
       <ul class="things">
         <font size="5px">
         <u>guy that likes to program or make stories for fun.</u></br>
