--- a/kontakt.html
+++ b/kontakt.html
@@ -22,6 +22,7 @@
         <b><a href="index.html">Back</a></b></br>
         </font>
       </ul>
+      <img class="image9" src="okuu.webp"
     </main>
     <footer></footer>
   </body>
