--- a/kontakt.html
+++ b/kontakt.html
@@ -13,6 +13,7 @@
     </nav>
     <header></header>
     <main>
+      <img class="image6" src="flan.jpg">
       <ul class="things">
         <font size="6px">
         <a href="https://mstdn.social/@slepice">mastodon</a></br>
@@ -21,8 +22,9 @@
         </br>
         <b><a href="index.html">Back</a></b></br>
         </font>
+        
       </ul>
-      <img class="image6" src="okuu.webp">
+      
     </main>
     <footer></footer>
   </body>
