--- a/kontakt.html
+++ b/kontakt.html
@@ -13,7 +13,7 @@
     </nav>
     <header></header>
     <main>
-      <img class="image6" src="flan.jpg">
+      <div>
       <ul class="things">
         <font size="6px">
         <a href="https://mstdn.social/@slepice">mastodon</a></br>
@@ -22,9 +22,9 @@
         </br>
         <b><a href="index.html">Back</a></b></br>
         </font>
-        
       </ul>
-      
+        <img class="image6" src="flan.jpg">
+      </div>
     </main>
     <footer></footer>
   </body>
