--- a/kontakt.html
+++ b/kontakt.html
@@ -23,7 +23,7 @@
         <b><a href="index.html">Back</a></b></br>
         </font>
       </ul>
-        <img class="image6" src="flan.jpg">
+        <div class="image6"><img src="flan.jpg"></div>
       </div>
     </main>
     <footer></footer>
