--- a/kontakt.html
+++ b/kontakt.html
@@ -13,7 +13,7 @@
     </nav>
     <header></header>
     <main>
-      <div>
+      
       <ul class="things">
         <font size="6px">
         <a href="https://mstdn.social/@slepice">mastodon</a></br>
@@ -23,8 +23,8 @@
         <b><a href="index.html">Back</a></b></br>
         </font>
       </ul>
-        <div class="image6"><img src="flan.jpg"></div>
-      </div>
+        <img class="image6" src="flan.jpg">
+      
     </main>
     <footer></footer>
   </body>
