--- a/kontakt.html
+++ b/kontakt.html
@@ -13,7 +13,7 @@
     </nav>
     <header></header>
     <main>
-      
+      <div>
       <ul class="things">
         <font size="6px">
         <a href="https://mstdn.social/@slepice">mastodon</a></br>
@@ -24,7 +24,8 @@
         </font>
         
       </ul>
-      <img class="image6" src="flan.jpg">
+        <div><img class="image6" src="flan.jpg"></div>
+      </div>  
     </main>
     <footer></footer>
   </body>
