--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <u>not too talkactive (sometimes) but would like to make friends.</u></br>
         <u>i suck at a lot of thing</u></br>
         </br>
-        <u>likes Anime, Touhou project, linux (i use Fedora btw), </br> games (Minecraft with mods, Terraria, bullet hell,</br> Factorio, strategy and logic games, <b><a href="https://osu.ppy.sh/users/31450404">osu!</a></b> not good at it), stories, science (nerd shit),</br> space (i can talk about this for day)</u></br>
+        <u>i like Anime, Touhou project, linux (i use Fedora btw), </br> games (Minecraft with mods, Terraria, bullet hell,</br> Factorio, strategy and logic games, <b><a href="https://osu.ppy.sh/users/31450404">osu!</a></b> not good at it), stories, science (nerd shit),</br> space (i can talk about this for day), retro</u></br>
         </br>
         <u>and i am funny (i dont think that but my friends think that) and chill</u></br>
         </br>
