some text at botton

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </font>
       </ul>
       <img class="main9" src="cirno.png">
+      <h5>9/10 Rika Furude's recommends this website, the tenth knows that it's a curse of Oyashiro-sama</h5>
     </main>
     <footer></footer>
   </body>
