--- a/kontakt.html
+++ b/kontakt.html
@@ -17,7 +17,7 @@
         <div><img class="image6" src="flan.jpg"></div>
         <ul class="things">
           <font size="6px">
-          <a href="https://mstdn.social/@slepice">mastodon</a></br>
+          <a rel="me" href="https://mastodon.arch-linux.cz/@slepice24">mastodon</a></br>
           <a href="https://metapixl.com/i/web/profile/504040523528613108">metapixl (not active mutch)</a></br>
           <a href="https://slepice24.itch.io/">itch.io</a></br>
           </br>
